# ncu-ce7024-assignment-1

./: .gitignore  110502519.py  README.md  infer.py  pyproject.toml  requirements.txt  result.txt  train.py
ner/: model.py  utils.py
