[project]
name = "NLP-Assignment-1-NER"
version = "0.1.0"
description = "Train a model on WNUT16 dataset for Named Entity Recognition"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.0.1",
    "datasets>=2.19.1",
    "scikit-learn>=1.5.2",
    "torch>=2.5.0",
    "transformers>=4.44.2",
]

[tool.uv]
dev-dependencies = ["ipywidgets>=8.1.5", "notebook>=7.1.3"]

[tool.uv.sources]
torch = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/test/xpu"
